src/style.css
/* ... */
#tableOverlay.show-headers {
  height: calc(100% - 11rem);
}

.overlay>* {
  margin: 0 auto;
  user-select: none;
}

.overlay>.mdi {
  font-size: 5rem !important;
}

.overlay>.mdi-loading {
  animation: rainbow 5s cubic-bezier(0.4, 0, 0.2, 1) infinite;
}

.overlay>.mdi-loading::before {
  transition: none;
}

#toolsPanel>.mdc-card:first-child {
  margin-bottom: 1rem;
}

.mdc-list-item>.mdi,
.modal-header>.mdi {
  font-size: 1.25rem;
}

.modal-header>.dropdown-icon {
  margin-right: .25rem;
}

.modal-title {
  line-height: 1;
}

.modal-body {
  max-height: 60vh;
  overflow: auto;
  transition: var(--transition);
  will-change: contents;
}

.modal-body>*:first-child {
  margin-top: 0;
}

#toolsPanel {
  max-width: 20.5rem;
}

form {
  overflow: auto;
}

form#editCase {
  line-height: normal;
  height: inherit;
}

#filter .col-md-12 {
  height: 4rem;
  transition: var(--transition);
}

#filter .collapsed>.col-md-12,
#filter .col-md-12.collapsed {
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  pointer-events: none;
}

.modal-body.collapsed:not(#filter),
form#filter.hide {
  max-height: 0vh;
  padding: 0 !important;
  opacity: 0;
}

.modal-header {
  z-index: 2;
}

.modal-header,
.modal-footer {
  align-items: stretch;
  flex-wrap: nowrap;
}

.modal-footer>* {
  margin: 0;
}

.my-1-5px {
  margin-top: 1.5px;
  margin-bottom: 1.5px;
}

.flex-row>label {
  width: -webkit-fill-available;
}

.flex-row>label:first-child {
  margin-right: .25rem;
}

.flex-row>label:last-child {
  margin-left: .25rem;
}

.button--add_select_item {
  border-left: solid 1px var(--mdc-theme-text-icon-on-background);
}

footer>.status {
  display: flex;
  flex: 1;
  padding: 0.5rem;
  align-items: center;
  justify-content: center;
  font-size: 0.7vw;
  font-weight: bold;
  user-select: none;
  transition: var(--transition);
  cursor: pointer;
}

tbody.dimmed tr:not(.not-dimmed),
footer.dimmed>.status:not(:hover, .selected),
footer:hover>.status:not(:hover, .selected) {
  filter: grayscale(1) opacity(.25);
}

footer>.status:active {
  font-size: 0.5vw;
  text-shadow: 0 0 20px currentColor;
}

footer>.status.selected {
  box-shadow: inset 0 0 0 0.2rem #000;
}

#dialogUpdate label {
  width: 8rem;
}

#dialogLogin>.mdc-dialog__scrim {
  background-color: var(--mdc-theme-background);
}

#inlineEdit {
  position: fixed;
  pointer-events: none;
  opacity: 0;
  transition: opacity var(--transition);
  z-index: 2;
}

#inlineEdit.show {
  pointer-events: auto;
  opacity: 1;
}

#inlineEdit .mdc-text-field {
  width: inherit;
  height: inherit;
  background-color: #fff;
  border-radius: var(--mdc-shape-small, 4px);
  padding-left: max(8px, calc(var(--mdc-shape-small, 4px) + 4px));
}

#inlineEdit .mdc-text-field input {
  font-weight: bold;
}

#foundCasesLinks {
  max-width: 50vw;
  overflow: auto;
  display: block;
  white-space: nowrap;
}

#foundCasesLinks::-webkit-scrollbar,
textarea::-webkit-scrollbar {
  box-shadow: inset 0 0 var(--bs-gray-300);
}

/*#region [data-status] */

[data-status="sentDocs"] {
  background-color: #00800080;
}

[data-status="sentDocs"] i {
  color: #00800080;
}

[data-status="invoiced"] {
  background-color: #000000bf;
  color: var(--mdc-theme-on-primary);
}

[data-status="invoiced"] i {
  color: #000000bf;
}

[data-status="dropped"] {
  background-color: #ff000080;
}

[data-status="dropped"] i {
  color: #ff000080;
}

[data-status="gop"] {
  background-color: #80ffff80;
}

[data-status="gop"] i {
  color: #80ffff80;
}

[data-status="payIssued"] {
  background-color: #00ff0080;
}

[data-status="payIssued"] i {
  color: #00ff0080;
}

[data-status="payReceived"] {
  background-color: #ff008080;
}

[data-status="payReceived"] i {
  color: #ff008080;
}

[data-status="multi"] {
  background-color: #8000ff80;
}

[data-status="multi"] i {
  color: #8000ff80;
}

[data-status="payNclaim"] {
  background-color: #ff800080;
}

[data-status="payNclaim"] i {
  color: #ff800080;
}

[data-status="active"] {
  background-color: #ffff0080;
}

[data-status="active"] i {
  color: #ffff0080;
}

[data-status="receivedDocs"] {
  background-color: #0080ff80;
}

[data-status="receivedDocs"] i {
  color: #0080ff80;
}

/*#endregion*/

/*#region SortableJS */

.sortable-ghost {
  opacity: 0;
}

/*#endregion*/

/*#region Tom Select */

.disabled .ts-control {
  opacity: 1;
}

.ts-wrapper:not(.form-select).single .ts-control {
  padding: 0 .5rem;
}

.ts-dropdown-content {
  padding: 0;
}

.ts-control .item,
.ts-dropdown .option {
  text-shadow: 0 0;
}

.ts-dropdown .option {
  padding: 0.2rem .5rem;
}

#country,
#country+.ts-wrapper>.ts-control .item,
#country-ts-dropdown .option {
  font-family: TwemojiMozilla, var(--mdc-typography-font-family, Roboto, sans-serif);
}

/*#endregion*/

/*#region Material Elements */

:root {
  --mdc-theme-primary: var(--bs-blue);
  --mdc-theme-secondary: var(--bs-red);
  --mdc-ripple-color: currentColor;
  --transition: .15s cubic-bezier(0.4, 0, 0.2, 1);
  --mdc-ripple-hover-opacity: .1;
  --mdc-typography-button-text-transform: normal;
  --mdc-shape-medium: .5rem;
}

.mdi {
  font-size: 1.5rem;
  line-height: 1;
  height: auto;
}

.mdc-card {
  max-height: 100%;
}

.mdc-tab--active {
  -webkit-app-region: drag;
}

.mdc-tab__text-label {
  font-weight: bold;
  user-select: none;
}

.input-group-text .mdi {
  font-size: 1rem;
}

.mdc-ripple-surface {
  will-change: auto;
}

.mdc-ripple-surface input[type=checkbox] {
  pointer-events: none;
}
/* ... */

